crates/php-parser/tests/snapshots/nikic_misc_tests__nikic_blockcomments.snap
---
source: crates/php-parser/tests/nikic_misc_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Block": [
          {
            "kind": {
              "Block": [
                {
                  "kind": {
                    "Expression": {
                      "kind": {
                        "Variable": "a"
                      },
                      "span": {
                        "start": 56,
                        "end": 58
                      }
                    }
                  },
                  "span": {
                    "start": 56,
                    "end": 64
                  }
                }
              ]
            },
            "span": {
              "start": 31,
              "end": 65
            }
          }
        ]
      },
      "span": {
        "start": 14,
        "end": 67
      }
    },
    {
      "kind": {
        "Block": []
      },
      "span": {
        "start": 78,
        "end": 80
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 80
  }
}
