crates/php-parser/tests/snapshots/nikic_misc_tests__nikic_noppositions_1.snap
---
source: crates/php-parser/tests/nikic_misc_tests.rs
expression: json
---
{
  "stmts": [],
  "span": {
    "start": 0,
    "end": 19
  }
}
