crates/php-parser/tests/snapshots/nikic_misc_tests__nikic_noppositions_2.snap
---
source: crates/php-parser/tests/nikic_misc_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Block": []
      },
      "span": {
        "start": 6,
        "end": 27
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 27
  }
}
